fix: order and spacing of clothes form

--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -23,6 +23,6 @@
   }
 
   .spacer {
-    height: 2rem;
+    height: 1.3rem;
   }
 }
